Quorum3/Library/Tests/Inheritance/Pass/MainSetParentFieldCast.quorum
class Main
    action Main
        B inheritingObject
        A baseObject = inheritingObject
        baseObject:VALUE = 4
        integer x = baseObject:VALUE
        output x
    end
end