Quorum3/Library/Tests/Inheritance/Fail/OutputPrivateParentValue.quorum
class Main 
    action Main
        Test1 t
        output t:x
        output t:parent:Test2:y
    end
end